CREATE TABLE storage_types (
  id SERIAL PRIMARY KEY,
  name VARCHAR NOT NULL UNIQUE,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

CREATE TRIGGER trg_storage_types_updated_at
  BEFORE UPDATE ON storage_types
  FOR EACH ROW
  EXECUTE FUNCTION updated_at_trigger();
